--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: ankane/pgvector:0.5.1
+    image: pgvector/pgvector:pg16
     container_name: taxdb-postgres
     environment:
       POSTGRES_USER: taxdb
