--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
-python = "3.12.11"
+python = ">=3.9"
 fastapi = "0.111.0"
 sqlalchemy = "2.0.29"
 pgvector = "0.2.5"
